# moudi-ml

./: .gitignore  .gitmodules  CMakeLists.txt  start.sh
lib/: CMakeLists.txt
lib/includes/: ml.h  network.h
lib/src/: ml.c  network.c
mnisc/: main.c  parse.c
mnisc/include/: parse.h
